methods.flowerpot.FlowerPot.scala.code
def growFlowers{
  setCouleurBrosse(Color.RED)
}

def dessinerFleur(){
  baisserBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
  avance()
  setCouleurBrosse(Color.YELLOW)
  leveBrosse
}